[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/rect.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Enemy" type="Sprite"]
modulate = Color( 1, 0, 0.858824, 1 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="HitBox" type="Area2D" parent="." groups=[
"Enemy",
]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 1 )

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
